# quality-standard-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pytest-cookies.yml  static_analysis.yml
hooks/: post_gen_project.py
tests/: test_bake.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml  docs.yml  pytest.yml
{{ cookiecutter.project_slug }}/conda.recipe/: meta.yaml
{{ cookiecutter.project_slug }}/docs/: conf.py  docs_environment.yml  index.rst  manifests.rst  schemas.rst
{{ cookiecutter.project_slug }}/resources/{{ cookiecutter.organization_name}}/manifests/: {{ cookiecutter.project_slug }}-1.0.0.yaml
{{ cookiecutter.project_slug }}/resources/{{ cookiecutter.organization_name}}/schemas/: cookiecutter_example-1.0.0.yaml  generic_equipment_example_schema-1.0.0.yaml  measurement_equipment_example_schema-1.0.0.yaml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: integration.py
{{ cookiecutter.project_slug }}/tests/: test_integration.py
