[metadata]
name = WelDX Quality Standard Cookiecutter Template
author = Cagtay Fabry
author_email = Cagtay.Fabry@bam.de
version = 0.1.0
license = BSD 3-Clause
license_file = LICENSE
description = A cookiecutter template to generate WelDX quality standards
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/BAMWeldx/quality-standard-template",

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    cookiecutter

[options.extras_require]
test =
    pytest
    pytest-cookies

[tool:pytest]
testpaths =
    tests
