[metadata]
name = WelDX Quality Standard Cookiecutter Template
author = Cagtay Fabry
author_email = Cagtay.Fabry@bam.de
version = 0.1.0
license = BSD 3-Clause
license_file = LICENSE
description = A cookiecutter template to generate WelDX quality standards
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/BAMWeldx/quality-standard-template",

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    cookiecutter

[options.extras_require]
test =
    pytest
    pytest-cookies

[tool:pytest]
addopts = --color=yes
testpaths =
    tests

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after comma's here
ignore =
    W503,W504,  # line break after binary operator
    E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
max-line-length = 88
select = C,E,F,W,B,B950 # black formatting options
exclude =
    __init__.py,
    doc/conf.py,

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = weldx
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
