[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=63",
  "setuptools_scm",
  "wheel",
]

[project]
name = "{{ cookiecutter-project-slug }}"
description = "{{ cookiecutter.description }}"
[project.readme]
file = "README.md"
content-type = "text/markdown"

license = {text = "BSD 3-Clause"}
[[project.authors]]
name = "{{ cookiecutter.author }}"
email = "{{ cookiecutter.author_email }}"

requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "asdf",
  'importlib_resources>=3; python_version < "3.9"',
  "weldx",
]
[project.optional-dependencies]
test = [
  "pytest",
]
urls = {Homepage = "{{ cookiecutter.url }}"}
[project.entry-points."weldx.standard"]
"{{ cookiecutter.project_slug}}" = "{{ cookiecutter.project_slug}}.integration:get_quality_standard"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false

[tool.flake8]
ignore = "E501, E203, W503"
exclude = ".git, __pycache__, build, dist, eggs, *.egg"

[tool.pytest.ini_options]
asdf_schema_root = "resources/{{ cookiecutter.organization_name }}/schemas"
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths = [
    # tests
    "resources",
]
