[metadata]
name = {{ cookiecutter.project_slug}}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
license = BSD 3-Clause
license_file = LICENSE
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.url }}

[options]
python_requires = >=3.6
zip_safe = true
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    asdf
    weldx
    importlib_resources>=3;python_version<"3.9"

[options.extras_require]
test =
    pytest

[options.entry_points]
weldx.standard =
    {{ cookiecutter.project_slug}} = {{ cookiecutter.project_slug}}.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/{{ cookiecutter.organization_name }}/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
;    tests
    resources

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg
